--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
 		"@mdx-js/react": "^2.1.1",
 		"classnames": "^2.2.6",
 		"framer-motion": "^6.3.4",
+		"gapi-script": "^1.2.0",
 		"lodash": "^4.17.15",
 		"react": "^16.14.0",
 		"react-dom": "^16.13.1",
 		"react-ga": "^2.7.0",
+		"react-google-login": "^5.2.2",
 		"react-icons": "^4.3.1",
 		"react-multi-carousel": "^2.8.0",
-		"react-router-dom": "^5.1.2",
+		"react-router-dom": "^5.3.3",
 		"react-scripts": "^3.4.1",
 		"sass": "^1.49.7",
 		"theme-ui": "^0.14.5"
